--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 nrf52833-hal = { git = "https://github.com/moddedTechnic/nrf-hal.git" }
+defmt = { version = "0.3.10", optional = true }
+
+[features]
+defmt = ["dep:defmt"]
